--- a/test.html
+++ b/test.html
@@ -5,7 +5,14 @@
     <title>아톰 업데이트</title>
   </head>
   <body>
-    나는 자랑스러운 태극기 앞에 조국과 민족의...
-    <h1>종강이다!</h1>
+    <img src="https://images.kbench.com/kbench/article/2018_12/k193893p1n1-s.jpg" alt="">
+    <br>삼성전자 갤럭시노트9의 신규 색상 '스노우 화이트'가 대만서 정식 출시됐다.<br>
+
+  대만서 출시된 스노우 화이트 색상은 지난달 30일 국내에 출시된 '알파인 화이트'와 동일하다. 제품 후면과 옆면, S펜까지 화이트 색상이 적용된 것이 특징.<br>
+
+  색상을 제외한 하드웨어 사양, 가격은 다른 모델과 동일하다. 갤럭시노트의 화이트 버전이 발표된 것은 2015년 갤럭시노트5 이후 3년 만이다.<br>
+
+  화이트 색상이 추가된 '갤럭시노트9'은 512GB 모델인 <font color=blue>오션 블루</font color>, <font color=purple>라벤더 퍼플</font color>,알파인 화이트 모델과 128GB모델인 미드나잇 블랙, 라벤더 퍼플, <font color=coper>메탈릭 코퍼</font color>, 클라우드 실버, 알파인 화이트 모델까지 총 8가지 모델, 6가지 색상 라인업을 갖추게 됐다.<br>
+
   </body>
 </html>
